<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_notifications">
        <SwitchPreferenceCompat
            app:key="pref_notifications"
            app:title="@string/settings_notifications_title"
            app:summary="@string/settings_notifications_summary"
            app:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_privacy">
        <SwitchPreferenceCompat
            app:key="pref_biometric_lock"
            app:title="@string/settings_biometric_title"
            app:summary="@string/settings_biometric_summary"
            app:defaultValue="false" />

        <ListPreference
            app:key="pref_biometric_timeout_seconds"
            app:title="@string/settings_biometric_timeout_title"
            app:summary="%s"
            app:defaultValue="30"
            app:entries="@array/biometric_timeout_entries"
            app:entryValues="@array/biometric_timeout_values"
            app:dependency="pref_biometric_lock" />

        <SwitchPreferenceCompat
            app:key="consent_fraud_signals"
            app:title="@string/pref_fraud_title"
            app:summary="@string/pref_fraud_summary"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="consent_telemetry"
            app:title="@string/pref_telemetry_title"
            app:summary="@string/pref_telemetry_summary"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_input">
        <SwitchPreferenceCompat
            app:key="pref_spellcheck"
            app:title="@string/settings_spellcheck_title"
            app:summary="@string/settings_spellcheck_summary"
            app:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_about">
        <Preference
            app:key="pref_about_version"
            app:title="@string/settings_version_title"
            app:summary="@string/settings_version_placeholder" />
    </PreferenceCategory>
</PreferenceScreen>
